--- a/css/main.scss
+++ b/css/main.scss
@@ -99,6 +99,7 @@ section {
 
         li {
           margin: 0.8em 2em;
+          list-style: none;
           a {
             text-decoration: none;
           }
