--- a/css/SFbasic.css
+++ b/css/SFbasic.css
@@ -13,6 +13,16 @@
   width: 100%;
 }
 
+.ai img {
+  width: 100%;
+  margin: 5em 0;
+}
+
+.ai .cnn {
+  width: 60%;
+  margin: 5em 20%;
+}
+
 .codetitle {
   width: 60%;
   padding: 0.5em 0;
