--- a/css/SFbasic.scss
+++ b/css/SFbasic.scss
@@ -12,6 +12,17 @@
     width: 100%;
   }
 }
+.ai {
+  img {
+    width: 100%;
+    margin: 5em 0;
+  }
+  .cnn {
+    width: 60%;
+    margin: 5em 20%;
+  }
+}
+
 .codetitle {
   width: 60%;
   padding: 0.5em 0;
