--- a/css/lessons.css
+++ b/css/lessons.css
@@ -2,22 +2,25 @@
   padding: 0.7em 1em;
   background-color: #ececec;
   text-align: center;
-  margin: 0.3em 0;
+  margin: 0.5em 0.5em;
   border-radius: 2em;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .tag:hover {
-  background-color: royalblue;
-  color: white;
+  background-color: #f9ea63;
+  color: black;
 }
 
 .tag:active {
-  background-color: royalblue;
-  color: white;
+  background-color: #f9ea63;
+  color: black;
 }
 
 .filterBar {
-  min-width: 12%;
+  width: 20%;
 }
 
 .filtercat {
@@ -40,10 +43,17 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  width: 80%;
 }
 
 .main .container .lessonGallery .item {
-  max-width: 30%;
+  max-width: 32%;
+}
+
+.main .container .lessonGallery .item:hover {
+  border-color: #ffffff;
+  border-style: solid;
+  border-width: 0.2em;
 }
 
 .main .container .lessonGallery .item img {
