--- a/css/lessons.scss
+++ b/css/lessons.scss
@@ -2,19 +2,20 @@
   padding: 0.7em 1em;
   background-color: rgb(236, 236, 236);
   text-align: center;
-  margin: 0.3em 0;
+  margin: 0.5em 0.5em;
   border-radius: 2em;
+  width: fit-content;
   &:hover {
-    background-color: royalblue;
-    color: white;
+    background-color: #f9ea63;
+    color: black;
   }
   &:active {
-    background-color: royalblue;
-    color: white;
+    background-color: #f9ea63;
+    color: black;
   }
 }
 .filterBar {
-  min-width: 12%;
+  width: 20%;
 }
 .filtercat {
   margin: 3em 0;
@@ -27,8 +28,15 @@
   .lessonGallery {
     display: flex;
     flex-wrap: wrap;
+    width: 80%;
     .item {
-      max-width: 30%;
+      max-width: 32%;
+      &:hover {
+        border-color: #ffffff;
+        border-style: solid;
+        border-width: 0.2em;
+      }
+
       img {
         width: 100%;
       }
