--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   width: 100%;
   height: 100vh;
+  margin: 0;
 }
 
 .container {
@@ -10,6 +11,13 @@ body {
 
 section {
   margin: 6em;
+}
+
+section h2 {
+  border-left: #f9ea63;
+  border-width: 0 0 0 1em;
+  border-style: solid;
+  padding: 0 1em;
 }
 
 .navbar {
@@ -148,5 +156,19 @@ section {
 
 .main .SF-main img {
   max-width: 100%;
+}
+
+.bottom {
+  padding: 6em;
+  background-color: #f9ea63;
+  margin: 5em 0 0 0;
+}
+
+.bottom h3 {
+  font-size: 2em;
+}
+
+.bottom p {
+  opacity: 60%;
 }
 /*# sourceMappingURL=main.css.map */
