--- a/css/main.scss
+++ b/css/main.scss
@@ -1,6 +1,7 @@
 body {
   width: 100%;
   height: 100vh;
+  margin: 0;
 }
 
 .container {
@@ -10,6 +11,12 @@ body {
 
 section {
   margin: 6em;
+  h2 {
+    border-left: #f9ea63;
+    border-width: 0 0 0 1em;
+    border-style: solid;
+    padding: 0 1em;
+  }
 }
 
 .navbar {
@@ -121,5 +128,16 @@ section {
     img {
       max-width: 100%;
     }
+  }
+}
+.bottom {
+  padding: 6em;
+  background-color: #f9ea63;
+  margin: 5em 0 0 0;
+  h3 {
+    font-size: 2em;
+  }
+  p {
+    opacity: 60%;
   }
 }
