--- a/css/SFbasic.css
+++ b/css/SFbasic.css
@@ -39,18 +39,22 @@
 }
 
 .codetitle {
-  width: 60%;
+  width: 80%;
   padding: 0.5em 0;
-  margin: 0.5em auto;
+  margin: 2.5em auto 0.5em auto;
   text-align: center;
   background-color: #f9ea63;
 }
 
 .code {
-  width: 60%;
-  height: 60vh;
+  width: 80%;
+  height: auto;
   border: solid 0.2em;
   border-color: black;
   margin: 0 auto;
+}
+
+.code img {
+  width: inherit;
 }
 /*# sourceMappingURL=SFbasic.css.map */
