--- a/css/project.scss
+++ b/css/project.scss
@@ -15,3 +15,13 @@
     margin: 6%;
   }
 }
+.gotobasic {
+  border-radius: 2em;
+  padding: 1.2em;
+  background-color: #f9ea63;
+  color: black;
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 0 auto;
+  text-decoration: none;
+}
