--- a/css/SFbasic.css
+++ b/css/SFbasic.css
@@ -2,11 +2,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 2em 5% 0 5%;
+  margin: 2em 5% 2em 5%;
 }
 
 .set img {
   max-width: 50%;
+}
+
+h2 {
+  margin-bottom: 2em;
 }
 
 .parts a {
