--- a/css/SFbasic.scss
+++ b/css/SFbasic.scss
@@ -1,11 +1,14 @@
 .set {
   display: flex;
 
-  margin: 2em 5% 0 5%;
+  margin: 2em 5% 2em 5%;
   img {
     // margin: 1em;
     max-width: 50%;
   }
+}
+h2 {
+  margin-bottom: 2em;
 }
 .parts a {
   padding: 0.8em 1em;
